--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,9 +6,6 @@ on:
 jobs:
   check-application:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go: ['1.20','1.23.2']
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -16,3 +13,15 @@ jobs:
           go-version: 1.23.2
       - run: go test
       - run: go run main.go
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: jamesfrj/fc-golang-with-github-actions:latest  
